# GameOfLife

./: CMakeLists.txt  main.cpp
src/: Board.cpp  Board.h  Cell.cpp  Cell.h  MapParser.cpp  MapParser.h
